--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
        <div class="container">
 
            <div class="row">
-            <div class="col-md-12 text-center text-light ">
+            <div class="col-md-12 text-center text-light mx-5">
                 <p class="title text-center"> Drag each piece of image below to complete the puzzle!!</p>
                 <img src="images/puzzle-grid.png" class="puzzle-grid-drop1"/>
                 <img src="images/puzzle-grid.png" class="puzzle-grid-drop2"/>
